2009-03-20  Dan Bernstein  <mitz@apple.com>

        Reviewed by Dave Hyatt.

        - fix https://bugs.webkit.org/show_bug.cgi?id=23739
          <rdar://problem/6556371> REGRESSION (r36513): iframe isn't sized properly upon load

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::percentHeightDescendants): Added this accessor.
        * rendering/RenderBlock.h:
        * rendering/RenderTableSection.cpp:
        (WebCore::RenderTableSection::layoutRows): Extended the check for
        children that flex to include other descendants with percent height
        which is relative to the cell.

2009-03-20  Dmitry Titov  <dimich@chromium.org>

        Reviewed by Alexey Proskuryakov.

        https://bugs.webkit.org/show_bug.cgi?id=24706
        Remove ScriptExecutionContext::encoding() since Workers do not need it.
        WorkerContext::encoding() is simply removed, while Document::encoding()
        made non-virtual and private. Workers use UTF-8 now except when instructed
        otherwise by http header. Also updated test.

        * dom/Document.h: Made encoding() non-virtual and private.
        * dom/ScriptExecutionContext.h: removed encoding().

        * workers/Worker.cpp:
        (WebCore::Worker::Worker):
        (WebCore::Worker::notifyFinished):
        * workers/WorkerContext.cpp: removed encoding() implementation.
        (WebCore::WorkerContext::WorkerContext):
        (WebCore::WorkerContext::completeURL):
        * workers/WorkerContext.h: removed encoding()
        (WebCore::WorkerContext::create):
        * workers/WorkerContextProxy.h:
        * workers/WorkerImportScriptsClient.cpp:
        (WebCore::WorkerImportScriptsClient::didReceiveData):
        * workers/WorkerMessagingProxy.cpp:
        (WebCore::WorkerMessagingProxy::startWorkerContext):
        * workers/WorkerMessagingProxy.h:
        * workers/WorkerThread.cpp:
        (WebCore::WorkerThreadStartupData::create):